# idlehack

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README  idlehack.service  idlehack.service.in  swayidle-inhibit
src/: blurb.c  blurb.h  idlehack.c  queue.h  version.h  yarandom.c  yarandom.h
